syntax = "proto3";

package userservice;

option go_package = "AdsService/userservice/proto;userservice";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
  // Profile
  rpc AddProfile (AddProfileRequest) returns (Profile);
  rpc GetProfile (google.protobuf.Empty) returns (Profile);
  rpc UpdateProfile (UpdateProfileRequest) returns (Profile);

  // Photo
  rpc UploadPhoto (UploadPhotoRequest) returns (Profile);

  // Settings
  rpc ChangeSettings (ChangeSettingsRequest) returns (Profile);

  // Subscriptions
  rpc ChangeSubscriptions (ChangeSubscriptionsRequest) returns (ChangeSubscriptionsResponse);

  // Admin menu
  rpc AdminGetProfile (AdminGetProfileRequest) returns (Profile);
  rpc AdminGetProfilesList (AdminGetProfilesListRequest) returns (AdminGetProfilesListResponse);
  rpc AdminBanUser (AdminBanUserRequest) returns (AdminBanUserResponse);
  rpc AdminUnbanUser (AdminUnbanUserRequest) returns (AdminUnbanUserResponse);
}

message Profile {
  uint64 user_id = 1;
  string name = 2;
  string phone = 3;
  string photo_id = 4;
  bool notifications_enabled = 5;
  repeated string subscriptions = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message AddProfileRequest {
  string name = 1;
  string phone = 2;
}

message UpdateProfileRequest {
  string name = 1;
  string phone = 2;
}

message UploadPhotoRequest {
  bytes data = 1;
  string filename = 2;
  string content_type = 3;
}

message ChangeSettingsRequest {
  bool notifications_enabled = 1;
}

message ChangeSubscriptionsRequest {
  repeated string subscriptions = 1;
}

message ChangeSubscriptionsResponse {
  Profile profile = 1;
}

message AdminGetProfileRequest {
  uint64 user_id = 1;
}

message AdminGetProfilesListRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

message AdminGetProfilesListResponse {
  repeated Profile profiles = 1;
}

message AdminBanUserRequest {
  uint64 user_id = 1;
}

message AdminBanUserResponse {
  bool banned = 1;
}

message AdminUnbanUserRequest {
  uint64 user_id = 1;
}

message AdminUnbanUserResponse {
  bool unbanned = 1;
}
